# Finance_autonomous_agentic_System

./: README.md  data_.py  file_download_helper.py  main.py  pyproject.toml
chroma_db/: chroma.sqlite3
skills/: README.md
skills/financial-metrics/: SKILL.md
skills/mpesa-financial-services/: SKILL.md
skills/safaricom-ai-innovation/: SKILL.md
skills/safaricom-telco-expertise/: SKILL.md
