[project]
name = "ds-autonomous-finance-agno"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13,<3.14"
dependencies = [
    "agno>=2.3.23",
    "anthropic>=0.75.0",
    "boto3>=1.42.21",
    "chromadb>=1.4.0",
    "ddgs>=9.10.0",
    "exa-py>=2.0.2",
    "pgvector>=0.4.2",
    "psycopg>=3.3.2",
    "pypdf>=6.5.0",
    "slack-sdk>=3.39.0",
    "sqlalchemy>=2.0.45",
]
